@@ -13,7 +13,7 @@ New Features and Enhancements
    
 * Updated Dockers
    - The drawing of dock targets now honours the DS_NO_DOCKCHILD_XXX styles
-   - Click and drag on the tabs to swap the order of DockContainers   
+   - Enabled click and drag tab swaps for DockContainers and TabbedMDIs
  
 * Added support for vertical toolbars
    - Vertical toolbars demonstrated in the toolbar sample
@@ -35,7 +35,8 @@ Modified CTabbedMDI::GetTab			now returns CWnd*
 
 Added user defined messages:
 UWM_GETFRAMEVIEW:		Used by CFrame.  Returns the view window's HWND 
-case UWN_DRAWRBBKGND:   Used by CFrame.  Called for rebar background redrawing
+UWN_DRAWRBBKGND:        Used by CFrame.  Called for rebar background redrawing
+UWN_TABDRAGGED:         Used by CTabbedMDI. Called when a CTab's tab is dragged
 
 
 
